SDI-2021-113-session2-Ejercicio-complementario3

--- a/sdi2021-113-spring/src/main/resources/templates/fragments/nav.html
+++ b/sdi2021-113-spring/src/main/resources/templates/fragments/nav.html
@@ -11,17 +11,15 @@
 		</div>
 		<div class="collapse navbar-collapse" id="myNavbar">
 			<ul class="nav navbar-nav">
-				<li class="active"><a href="/mark/list">Ver Notas</a></li>
-				<li><a href="/mark/add">Agregar Nota</a></li>
-				<li><a href="/mark/filter">Filtrar</a></li>
-			</ul>
-			<ul class="nav navbar-nav navbar-right">
-				<li><a href="/signup"> <span
-						class="glyphicon glyphicon-user"></span> Registrate
-				</a></li>
-				<li><a href="/login"> <span
-						class="glyphicon glyphicon-log-in"></span> Identifícate
-				</a></li>
+				<li class="active">
+					<a href="/professor/list">Ver Profesores</a>
+				</li>
+				<li>
+					<a href="/professor/add">Agregar Profesores</a>
+				</li>
+				<li>
+					<a href="/professor/remove">Eliminar Profesores</a>
+				</li>
 			</ul>
 		</div>
 	</div>
