--- a/sdi2021-113-spring/src/main/resources/templates/professor/list.html
+++ b/sdi2021-113-spring/src/main/resources/templates/professor/list.html
@@ -26,6 +26,7 @@
         <li><a href="/professor/list">Ver Profesores</a></li>
 		<li class="active"><a href="/professor/add">Agregar Profesor</a></li>
         <li><a href="/professor/remove">Eliminar profesor</a></li>
+        <li><a href="/professor/edit">Editar profesor</a></li>
       </ul>
     </div>
   </div>
