--- a/sdi2021-113-spring/src/main/resources/templates/fragments/nav.html
+++ b/sdi2021-113-spring/src/main/resources/templates/fragments/nav.html
@@ -1,26 +1,21 @@
 <!-- nav.html -->
 <nav class="navbar navbar-inverse">
-	<div class="container-fluid">
-		<div class="navbar-header">
-			<button type="button" class="navbar-toggle" data-toggle="collapse"
-				data-target="#myNavbar">
-				<span class="icon-bar"></span> <span class="icon-bar"></span> <span
-					class="icon-bar"></span>
-			</button>
-			<img src="/img/student-48.png" alt="logo" />
-		</div>
-		<div class="collapse navbar-collapse" id="myNavbar">
-			<ul class="nav navbar-nav">
-				<li class="active">
-					<a href="/professor/list">Ver Profesores</a>
-				</li>
-				<li>
-					<a href="/professor/add">Agregar Profesores</a>
-				</li>
-				<li>
-					<a href="/professor/remove">Eliminar Profesores</a>
-				</li>
-			</ul>
-		</div>
-	</div>
-</nav>
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>                        
+      </button>
+      <img src="/img/student-48.png" alt="logo"/>
+    </div>
+    <div class="collapse navbar-collapse" id="myNavbar">
+      <ul class="nav navbar-nav">
+        <li><a href="/professor/list">Ver Profesores</a></li>
+		<li class="active"><a href="/professor/add">Agregar Profesor</a></li>
+        <li><a href="/professor/remove">Eliminar profesor</a></li>
+        <li><a href="/professor/edit">Editar profesor</a></li>
+      </ul>
+    </div>
+  </div>
+</nav>>
