--- a/sdi2021-113-spring/src/main/resources/templates/professor/list.html
+++ b/sdi2021-113-spring/src/main/resources/templates/professor/list.html
@@ -1,36 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <title>Notaneitor</title>
-  <meta charset="utf-8"/>
-  <meta name="viewport" content="width=device-width, initial-scale=1"/>
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"/>
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-</head>
+	<head th:replace="fragments/head" />
 <body>
 
 <!-- Barra de Navegación superior -->
-<nav class="navbar navbar-inverse">
-  <div class="container-fluid">
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>                        
-      </button>
-      <img src="/img/student-48.png" alt="logo"/>
-    </div>
-    <div class="collapse navbar-collapse" id="myNavbar">
-      <ul class="nav navbar-nav">
-        <li><a href="/professor/list">Ver Profesores</a></li>
-		<li class="active"><a href="/professor/add">Agregar Profesor</a></li>
-        <li><a href="/professor/remove">Eliminar profesor</a></li>
-        <li><a href="/professor/edit">Editar profesor</a></li>
-      </ul>
-    </div>
-  </div>
-</nav>
+<nav th:replace="fragments/nav" />
 
 <div class="container">
   <h2>Profesores</h2>
