--- a/sdi2021-113-spring/src/main/resources/templates/signup.html
+++ b/sdi2021-113-spring/src/main/resources/templates/signup.html
@@ -5,33 +5,42 @@
 	<nav th:replace="fragments/nav" />
 	<div class="container" style="text-align: center">
 		<h2>Regístrate como usuario</h2>
-		<form class="form-horizontal" method="post" action="/signup">
+		<form class="form-horizontal" method="post" action="/signup"
+			th:object="${user}">
 			<div class="form-group">
 				<label class="control-label col-sm-2" for="dni">DNI:</label>
 				<div class="col-sm-10">
 					<input type="text" class="form-control" name="dni"
-						placeholder="99999999Y" required="true" />
+						placeholder="99999999Y" required="true" /><span
+						class="text-danger" th:if="${#fields.hasErrors('dni')}"
+						th:errors="*{dni}"></span>
 				</div>
 			</div>
 			<div class="form-group">
 				<label class="control-label col-sm-2" for="dni">Nombre:</label>
 				<div class="col-sm-10">
 					<input type="text" class="form-control" name="name"
-						placeholder="Ejemplo: Juan" required="true" />
+						placeholder="Ejemplo: Juan" required="true" /><span
+						class="text-danger" th:if="${#fields.hasErrors('name')}"
+						th:errors="*{name}"></span>
 				</div>
 			</div>
 			<div class="form-group">
 				<label class="control-label col-sm-2" for="dni">Apellidos:</label>
 				<div class="col-sm-10">
 					<input type="text" class="form-control" name="lastName"
-						placeholder="Ejemplo: Núñez García" required="true" />
+						placeholder="Ejemplo: Núñez García" required="true" /><span
+						class="text-danger" th:if="${#fields.hasErrors('lastName')}"
+						th:errors="*{lastName}"></span>
 				</div>
 			</div>
 			<div class="form-group">
 				<label class="control-label col-sm-2" for="dni">Contraseña:</label>
 				<div class="col-sm-10">
 					<input type="password" class="form-control" name="password"
-						placeholder="Contraseña" required="true" />
+						placeholder="Contraseña" required="true" /><span
+						class="text-danger" th:if="${#fields.hasErrors('password')}"
+						th:errors="*{password}"></span>
 				</div>
 			</div>
 			<div class="form-group">
@@ -39,7 +48,10 @@
 					contraseña:</label>
 				<div class="col-sm-10">
 					<input type="password" class="form-control" name="passwordConfirm"
-						placeholder="Repita la contraseña" required="true" />
+						placeholder="Repita la contraseña" required="true" /><span
+						class="text-danger"
+						th:if="${#fields.hasErrors('passwordConfirm')}"
+						th:errors="*{passwordConfirm}"></span>
 				</div>
 			</div>
 			<div class="form-group">
