SDI-2021-113-sesión3-Ejercicio-complementario2

--- a/sdi2021-113-spring/src/main/resources/templates/fragments/nav.html
+++ b/sdi2021-113-spring/src/main/resources/templates/fragments/nav.html
@@ -10,22 +10,26 @@
 		</div>
 		<div class="collapse navbar-collapse" id="myNavbar">
 			<ul class="nav navbar-nav">
-				<li><a href="/">Home</a></li>
+				<li><a href="/" th:text="#{welcome.home}">Home</a></li>
 				<li id="marks-menu" class="dropdown"><a class="dropdown-toggle"
-					data-toggle="dropdown" href="#"> Gestión de notas <span
-						class="caret"></span>
+					data-toggle="dropdown" href="#" th:text="#{marks.managing}">
+						Gestión de notas <span class="caret"></span>
 				</a>
 					<ul class="dropdown-menu">
-						<li><a href="/mark/add">Agregar Nota</a></li>
-						<li><a href="/mark/list">Ver Notas</a></li>
+						<li><a href="/mark/add" th:text="#{marks.add}">Agregar
+								Nota</a></li>
+						<li><a href="/mark/list" th:text="#{marks.list}">Ver
+								Notas</a></li>
 					</ul></li>
 				<li id="users-menu" class="dropdown"><a class="dropdown-toggle"
-					data-toggle="dropdown" href="#"> Gestión de Usuarios <span
-						class="caret"></span>
+					data-toggle="dropdown" href="#" th:text="#{users.managing}">
+						Gestión de Usuarios <span class="caret"></span>
 				</a>
 					<ul class="dropdown-menu">
-						<li><a href="/user/add">Agregar Usuario</a></li>
-						<li><a href="/user/list">Ver Usuarios</a></li>
+						<li><a href="/user/add" th:text="#{users.add}">Agregar
+								Usuario</a></li>
+						<li><a href="/user/list" th:text="#{users.list}">Ver
+								Usuarios</a></li>
 					</ul></li>
 			</ul>
 			<ul class="nav navbar-nav navbar-right">
@@ -44,6 +48,11 @@
 								th:src="@{/img/if_spain_flag.png}"
 								style="border: 0; float: left; margin-right: 15px" /> <span
 								th:text="#{language.es}">Español</span>
+						</a></li>
+						<li><a id="btnFrench" value="FR"> <img
+								th:src="@{/img/if_spain_flag.png}"
+								style="border: 0; float: left; margin-right: 15px" /> <span
+								th:text="#{language.jp}">Japonés</span>
 						</a></li>
 					</ul>
 				<li><a href="/signup" th:text="#{signup.message}"> <span
