--- a/sdi2021-113-spring/src/main/resources/templates/signup.html
+++ b/sdi2021-113-spring/src/main/resources/templates/signup.html
@@ -4,11 +4,12 @@
 <body>
 	<nav th:replace="fragments/nav" />
 	<div class="container" style="text-align: center">
-		<h2>Regístrate como usuario</h2>
+		<h2 th:text="#{signup.title}">Regístrate como usuario</h2>
 		<form class="form-horizontal" method="post" action="/signup"
 			th:object="${user}">
 			<div class="form-group">
-				<label class="control-label col-sm-2" for="dni">DNI:</label>
+				<label class="control-label col-sm-2" for="dni"
+					th:text="#{signup.dni}">DNI:</label>
 				<div class="col-sm-10">
 					<input type="text" class="form-control" name="dni"
 						placeholder="99999999Y" required="true" /><span
@@ -17,7 +18,8 @@
 				</div>
 			</div>
 			<div class="form-group">
-				<label class="control-label col-sm-2" for="dni">Nombre:</label>
+				<label class="control-label col-sm-2" for="dni"
+					th:text="#{signup.name}">Nombre:</label>
 				<div class="col-sm-10">
 					<input type="text" class="form-control" name="name"
 						placeholder="Ejemplo: Juan" required="true" /><span
@@ -26,7 +28,8 @@
 				</div>
 			</div>
 			<div class="form-group">
-				<label class="control-label col-sm-2" for="dni">Apellidos:</label>
+				<label class="control-label col-sm-2" for="dni"
+					th:text="#{signup.lastName}">Apellidos:</label>
 				<div class="col-sm-10">
 					<input type="text" class="form-control" name="lastName"
 						placeholder="Ejemplo: Núñez García" required="true" /><span
@@ -35,7 +38,8 @@
 				</div>
 			</div>
 			<div class="form-group">
-				<label class="control-label col-sm-2" for="dni">Contraseña:</label>
+				<label class="control-label col-sm-2" for="dni"
+					th:text="#{signup.password}">Contraseña:</label>
 				<div class="col-sm-10">
 					<input type="password" class="form-control" name="password"
 						placeholder="Contraseña" required="true" /><span
@@ -44,8 +48,8 @@
 				</div>
 			</div>
 			<div class="form-group">
-				<label class="control-label col-sm-2" for="dni">Repita la
-					contraseña:</label>
+				<label class="control-label col-sm-2" for="dni"
+					th:text="#{signup.passwordConfirm}">Repita la contraseña:</label>
 				<div class="col-sm-10">
 					<input type="password" class="form-control" name="passwordConfirm"
 						placeholder="Repita la contraseña" required="true" /><span
@@ -56,7 +60,8 @@
 			</div>
 			<div class="form-group">
 				<div class="col-sm-offset-2 col-sm-10">
-					<button type="submit" class="btn btn-primary">Enviar</button>
+					<button type="submit" class="btn btn-primary"
+						th:text="#{signup.send}">Enviar</button>
 				</div>
 			</div>
 		</form>
