--- a/sdi2021-113-spring/src/main/resources/templates/login.html
+++ b/sdi2021-113-spring/src/main/resources/templates/login.html
@@ -4,10 +4,11 @@
 <body>
 	<nav th:replace="fragments/nav" />
 	<div class="container" style="text-align: center">
-		<h2>Identifícate</h2>
+		<h2 th:text="#{login.title}">Identifícate</h2>
 		<form class="form-horizontal" method="post" action="/login">
 			<div class="form-group">
-				<label class="control-label col-sm-2" for="dni">DNI:</label>
+				<label class="control-label col-sm-2" for="dni"
+					th:text="#{login.dni}">DNI:</label>
 				<div class="col-sm-10">
 					<input type="text" class="form-control" name="username"
 						placeholder="99999999Y" required="true" />
@@ -15,7 +16,8 @@
 			</div>
 
 			<div class="form-group">
-				<label class="control-label col-sm-2" for="dni">Contraseña:</label>
+				<label class="control-label col-sm-2" for="dni"
+					th:text="#{login.password}">Contraseña:</label>
 				<div class="col-sm-10">
 					<input type="password" class="form-control" name="password"
 						placeholder="Contraseña" required="true" />
@@ -24,7 +26,8 @@
 
 			<div class="form-group">
 				<div class="col-sm-offset-2 col-sm-10">
-					<button type="submit" class="btn btn-primary">Enviar</button>
+					<button type="submit" class="btn btn-primary"
+						th:text="#{login.send}">Enviar</button>
 				</div>
 			</div>
 			<input type="hidden" name="${_csrf.parameterName}"
