--- a/sdi2021-113-spring/src/main/resources/templates/fragments/nav.html
+++ b/sdi2021-113-spring/src/main/resources/templates/fragments/nav.html
@@ -9,21 +9,23 @@
 			<img src="/img/student-48.png" alt="logo" />
 		</div>
 		<div class="collapse navbar-collapse" id="myNavbar">
-			<ul class="nav navbar-nav">
+			<ul class="nav navbar-nav" sec:authorize="isAuthenticated()">
 				<li><a href="/" th:text="#{welcome.home}">Home</a></li>
 				<li id="marks-menu" class="dropdown"><a class="dropdown-toggle"
 					data-toggle="dropdown" href="#" th:text="#{marks.managing}">
 						Gestión de notas <span class="caret"></span>
 				</a>
 					<ul class="dropdown-menu">
-						<li><a href="/mark/add" th:text="#{marks.add}">Agregar
-								Nota</a></li>
+						<li sec:authorize="hasRole('ROLE_PROFESSOR')"><a
+							href="/mark/add" th:text="#{marks.add}">Agregar Nota</a></li>
 						<li><a href="/mark/list" th:text="#{marks.list}">Ver
 								Notas</a></li>
 					</ul></li>
-				<li id="users-menu" class="dropdown"><a class="dropdown-toggle"
-					data-toggle="dropdown" href="#" th:text="#{users.managing}">
-						Gestión de Usuarios <span class="caret"></span>
+				<li id="users-menu" class="dropdown"
+					sec:authorize="hasRole('ROLE_ADMIN')"><a
+					class="dropdown-toggle" data-toggle="dropdown" href="#"
+					th:text="#{users.managing}"> Gestión de Usuarios <span
+						class="caret"></span>
 				</a>
 					<ul class="dropdown-menu">
 						<li><a href="/user/add" th:text="#{users.add}">Agregar
@@ -49,19 +51,23 @@
 								style="border: 0; float: left; margin-right: 15px" /> <span
 								th:text="#{language.es}">Español</span>
 						</a></li>
-						<li><a id="btnFrench" value="FR"> <img
+						<li><a id="btnJapanese" value="JP"> <img
 								th:src="@{/img/if_spain_flag.png}"
 								style="border: 0; float: left; margin-right: 15px" /> <span
 								th:text="#{language.jp}">Japonés</span>
 						</a></li>
 					</ul>
-				<li><a href="/signup" th:text="#{signup.message}"> <span
+				<li sec:authorize="!isAuthenticated()"><a href="/signup"
+					th:text="#{signup.message}"> <span
 						class="glyphicon glyphicon-user"></span>
 				</a></li>
-				<li><a href="/login" th:text="#{login.message}"> <span
+				<li sec:authorize="!isAuthenticated()"><a href="/login"
+					th:text="#{login.message}"> <span
 						class="glyphicon glyphicon-log-in"></span>
 				</a></li>
-				</li>
+				<li sec:authorize="isAuthenticated()"><a href="/logout"> <span
+						class="glyphicon glyphicon-log-out"></span> Desconectar
+				</a></li>
 			</ul>
 		</div>
 	</div>
