--- a/sdi2021-113-spring/src/main/resources/templates/home.html
+++ b/sdi2021-113-spring/src/main/resources/templates/home.html
@@ -7,7 +7,8 @@
 		<h2 th:text="#{welcome.message}"></h2>
 		<h3>Esta es una zona privada de la web</h3>
 		<p>
-			Usuario autenticado como: <b th:inline="text">[[${#httpServletRequest.remoteUser}]]</b>
+			Usuario autenticado como: <span
+				sec:authentication="principal.username" th:inline="text"></span>
 		</p>
 		<p>Notas del usuario</p>
 		<div class="table-responsive">
