--- a/sdi2021-113-spring/src/main/resources/templates/mark/list.html
+++ b/sdi2021-113-spring/src/main/resources/templates/mark/list.html
@@ -81,8 +81,9 @@
 						<td th:text="${mark.id}">1</td>
 						<td th:text="${mark.description}">Ejercicio 1</td>
 						<td th:text="${mark.score}">10</td>
-						<td><a th:href="${'/mark/details/' + mark.id}">detalles</a></td>
-						<td><a sec:authorize="hasRole('ROLE_PROFESSOR')" th:href="${'/mark/edit/' + mark.id}">modificar</a>
+						<td><a th:href="${'/mark/details/' + mark.id}">Detalles</a></td>
+						<td><a sec:authorize="hasRole('ROLE_PROFESSOR')" th:href="${'/mark/edit/' + mark.id}">Modificar</a>
+							
 							<div sec:authorize="hasRole('ROLE_STUDENT')">
 								<div th:if="${mark.resend}">
 									<button type="button" th:id="${'resendButton' + mark.id}" class="btn btn-info">Reenviar</button>
@@ -103,6 +104,7 @@
 									
 									</script>
 								</div>
+								
 								<div th:unless="${mark.resend}">
 									<button type="button" th:id="${'noresendButton' + mark.id}" class="btn btn-default">No reenviar</button>
 									<script th:inline="javascript">
