--- a/sdi2021-113-spring/src/main/resources/templates/professor/list.html
+++ b/sdi2021-113-spring/src/main/resources/templates/professor/list.html
@@ -8,10 +8,10 @@
 
 	<div class="container">
 		<h2>Profesores</h2>
-		<form class="navbar-form" action="/mark/list">
+		<form class="navbar-form" action="/professor/list">
 			<div class="form-group">
 				<input name="searchText" type="text" class="form-control" size="50"
-					placeholder="Buscar por descripción o nombre del alumno">
+					placeholder="Buscar por descripción o nombre del profesor">
 			</div>
 			<button type="submit" class="btn btn-default">Buscar</button>
 		</form>
@@ -39,7 +39,5 @@
 			</table>
 		</div>
 	</div>
-
-
 </body>
 </html>
